Explicit call to Collectors.toList() replaced with Stream.ToList()